@@ -1,3 +1,9 @@
+2004-08-28  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b134
+
+	* Fix: remove tr that was causing netscape problems
+    
+	* Change: vertically align albums at the top of the table cell on the front page
+
 2004-08-27  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b133
 
 	* Fix: one more stay "popup" css class removed
